* Instinct Release 0.2.0 *

o Reductio Integration
  o Integrated Reductio, a tool for automated specification testing. See
    http://reductiotest.org/ for more information.


* Instinct Release 0.1.9 *

Maintenance release; Multiple errors are now displayed when a specification fails with more
than one exception, specification lifecycle can now be customised, Scala examples, additional
Functional Java matchers (List, Either, Option), seperate source JAR.

o Core Features
  o Custom specification lifecycles can now be plugged in using the @Context annotation.
    This would allow for example, a Spring application context to be initialised and wired
    into each specification method allowing integration-style specifications using a Spring
    beans.
  o Multiple errors are now displayed when a specification fails with more than one exception.
o Scala integration
  o Added Scala stack example, showing the use of Instinct under Scala to spec out Scala
    code.
o Expectation API
  o Added fj.data.List matchers:
    expect.that(List.nil().cons(1)).isEqualTo(List.nil().cons(1))
  o Added fj.data.Option matchers:
    expect.that(Some(1)).isSome(1), expect.that(foo.bar()).isNone().
  o Added fj.data.Either matchers:
    expect.that(error()).isLeft(runtimeException), expect.that(foo.bar()).isRight(42).
o Packaging
  o Moved source code out of main jar into instinct-<version>-sources.jar.
o Infrastructure
  o Upgraded to: Functional Java 2.10.
o Bugs
  o (Issue 21) Expected exception try-catch should only wrap specs, not before and after.
  o (Issue 19) Throwing exception out of mocked code confused expected exception handling.
  o (Issue 40) Formatting of multiple exception report could be nicer.


* Instinct Release 0.1.8 *

Maintenance release; Added the ability to customise the way specifications and other lifecycle
methods are found.

o Core Features
  o Custom specification, before specification and after specification annotations and