@@ -16,12 +16,12 @@
 
 package com.googlecode.instinct.expect.state.matcher;
 
+import static com.googlecode.instinct.expect.state.matcher.ToStringableOption.toStringableOption;
 import com.googlecode.instinct.integrate.junit4.InstinctRunner;
 import com.googlecode.instinct.marker.annotate.BeforeSpecification;
 import com.googlecode.instinct.marker.annotate.Specification;
 import com.googlecode.instinct.marker.annotate.Stub;
 import fj.data.Option;
-import static fj.data.Option.none;
 import static fj.data.Option.some;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.lessThan;
@@ -30,13 +30,13 @@ import org.junit.runner.RunWith;
 
 @RunWith(InstinctRunner.class)
 public final class AnOptionIsSomeMatcher {
-    @Stub(auto = false) private Option<Integer> someOption;
-    @Stub(auto = false) private Option<Integer> noneOption;
+    @Stub(auto = false) private ToStringableOption<Integer> someOption;
+    @Stub(auto = false) private ToStringableOption<Integer> noneOption;
 
     @BeforeSpecification
     public void before() {
-        someOption = some(5);
-        noneOption = none();
+        someOption = toStringableOption(some(5));
+        noneOption = toStringableOption(Option.<Integer>none());
     }
 
     @Specification
